# email-security-copilot

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
notebooks/: test.ipynb
src/email_security_copilot/: config.py
src/email_security_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/email_security_copilot/data/: build_processed.py  build_spamassassin_dataset.py  data.py  dataset.py  textPreprocessor.py
src/email_security_copilot/features/: features.py
